# aiogram-template

./: .env_ex  .gitignore  README.md  pyproject.toml
logic/: __init__.py  start.py
root/: __init__.py  __main__.py  dispatcher.py  settings.py
utils/: inlinekeyboardbuilder.py  keyboardbuilder.py  set_bot_commands.py
